# noticias-bot

./: .gitignore  pyproject.toml
src/noticias_bot/: main.py
src/noticias_bot/adapters/: ai_client.py  news_client.py
src/noticias_bot/domain/: models.py
